# Programmieren-Physik-LMU

./: Uebungsblatt_3.md  factorial.cpp  legendre.cpp  vector  vector.cpp
Blatt 3/: README.md  factorial.cpp
EinProg/: Blatt
EinProg/Blatt 10/: hermite  hermite.cpp  hermite.h  math  math.cpp  math.h
EinProg/Blatt 14/: debug_me.cpp  input.txt  wkb.cpp
EinProg/Blatt 14/Eigen/: test  test.cpp
EinProg/Blatt 3/: binomial  binomial.cpp  factorial  factorial.cpp  legendre  legendre.cpp  legendre_list  legendre_list.cpp
EinProg/Blatt 4/: addition  addition.cpp  binomial  binomial.cpp  cross  cross.cpp  multiply  multiply.cpp  pascal  pascal.cpp
EinProg/Blatt 5/: bohr  bohr.cpp  legendre  legendre.cpp  myPhysics.h  swap  swap.cpp
EinProg/Blatt 6/: epString.h  split  split.cpp
EinProg/forder/: test-0.txt
EinProg/physics/: data.txt  physics  physics.cpp  plot.py  sample.py
EinProg/test/: test  test.cpp  test.h
FortProg/Blatt02/src/: main.c  pointer_fns.c
FortProg/Blatt03/: CMakeLists.txt
FortProg/Blatt03/src/: main.c
Numerik/Blatt02/: arithmetisch.py
